--- a/ng2angle/package.json
+++ b/ng2angle/package.json
@@ -37,9 +37,9 @@
     "@ngx-translate/http-loader": "4.0.0",
     "@swimlane/ngx-datatable": "16.0.3",
     "ag-grid-angular": "24.0.0",
-    "ag-grid-community": "24.0.0",
+    "ag-grid-community": "^32.3.3",
     "angular-imask": "6.0.5",
-    "bootstrap": "4.6.0",
+    "bootstrap": "^5.3.3",
     "chart.js": "2.9.4",
     "classlist.js": "1.1.20150312",
     "codemirror": "5.62.0",
@@ -57,8 +57,8 @@
     "jquery.flot.spline": "themicon/jquery.flot.spline",
     "jquery.flot.tooltip": "github:krzysu/flot.tooltip",
     "lodash": "4.17.21",
-    "modernizr": "3.11.3",
-    "moment": "2.22.2",
+    "modernizr": "^3.13.1",
+    "moment": "^2.30.1",
     "ng2-charts": "2.4.2",
     "ng2-dnd": "5.0.2",
     "ng2-file-upload": "1.4.0",
@@ -76,7 +76,7 @@
     "simple-line-icons": "2.4.1",
     "source-sans-pro": "2.40.0",
     "spinkit": "1.2.5",
-    "summernote": "0.8.10",
+    "summernote": "^0.9.1",
     "sweetalert": "2.1.2",
     "ts-helpers": "1.1.1",
     "tslib": "2.1.0",
@@ -85,18 +85,18 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.0.5",
-    "@angular/cli": "12.0.5",
+    "@angular-devkit/build-angular": "^19.0.2",
+    "@angular/cli": "^19.0.2",
     "@angular/compiler-cli": "12.0.5",
     "@types/codemirror": "0.0.67",
     "@types/jasmine": "3.6.0",
     "@types/jasminewd2": "2.0.3",
     "@types/lodash": "4.14.118",
     "@types/node": "12.11.1",
-    "codelyzer": "6.0.0",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "3.7.0",
     "jasmine-spec-reporter": "5.0.0",
-    "karma": "6.3.0",
+    "karma": "^6.4.4",
     "karma-chrome-launcher": "3.1.0",
     "karma-cli": "1.0.1",
     "karma-coverage": "~2.0.3",
@@ -105,7 +105,7 @@
     "karma-jasmine-html-reporter": "1.5.0",
     "karma-read-json": "1.1.0",
     "loaders.css": "0.1.2",
-    "protractor": "7.0.0",
+    "protractor": "^3.3.0",
     "ts-node": "8.3.0",
     "tslint": "6.1.0",
     "typescript": "4.2.3",
