--- a/escolarWeb/package.json
+++ b/escolarWeb/package.json
@@ -28,21 +28,21 @@
     "@angular/ssr": "^18.0.5",
     "@circlon/angular-tree-component": "^11.0.4",
     "@ctrl/ngx-codemirror": "^7.0.0",
-    "@fortawesome/fontawesome-free": "^6.6.0",
-    "@fullcalendar/angular": "^6.1.15",
-    "@fullcalendar/bootstrap": "^6.1.15",
-    "@fullcalendar/core": "^6.1.15",
-    "@fullcalendar/daygrid": "^6.1.15",
-    "@fullcalendar/interaction": "^6.1.15",
-    "@fullcalendar/list": "^6.1.15",
-    "@fullcalendar/timegrid": "^6.1.15",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@fullcalendar/angular": "4.4.5-beta",
+    "@fullcalendar/bootstrap": "4.4.0",
+    "@fullcalendar/core": "^4.4.0",
+    "@fullcalendar/daygrid": "^4.4.0",
+    "@fullcalendar/interaction": "4.4.0",
+    "@fullcalendar/list": "4.4.0",
+    "@fullcalendar/timegrid": "4.4.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.8",
     "@progress/kendo-angular-inputs": "^16.4.0",
     "@swimlane/ngx-datatable": "^20.1.0",
     "ag-grid-angular": "^28.2.1",
-    "ag-grid-community": "^32.0.2",
+    "ag-grid-community": "^24.0.2",
     "angular-imask": "^7.6.1",
     "bootstrap": "^4.6.0",
     "chart.js": "^4.4.3",
@@ -73,22 +73,23 @@
     "ngx-infinite-scroll": "^18.0.0",
     "ngx-mask": "^17.1.6",
     "ngx-select-ex": "^8.0.1",
-    "ngx-summernote": "^1.0.0",
+    "summernote": "0.9.1",
     "ngx-toastr": "^19.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "rxjs-compat": "^6.6.7",
     "sass": "^1.81.0",
     "screenfull": "^6.0.2",
-    "simple-line-icons": "^2.5.5",
+    "simple-line-icons": "2.4.1",
     "source-sans-pro": "^3.6.0",
-    "spinkit": "^2.0.1",
+    "spinkit": "1.2.5",
     "sweetalert2": "^11.6.13",
     "ts-helpers": "^1.1.2",
     "tslib": "^2.3.0",
     "weather-icons": "github:erikflowers/weather-icons",
     "web-animations-js": "^2.3.2",
-    "zone.js": "^0.14.7"
+    "zone.js": "^0.14.7",
+    "loaders.css": "0.1.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.0.5",
